[package]
name = "RustHydrus-scraper-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"
lto=true
codegenunits=1
strip = true

[lib]
doc=true
name = "base"
path = "src/lib.rs"
crate-type = ["dylib"]
